# data_streaming_test

./: README.md  docker-compose.yml  pyproject.toml  start_pipeline.sh
data-generator/: Dockerfile  generator.py
debezium/: connector-config.json  register_connector.sh
flink/: Dockerfile  requirements.txt  stream_job.py
postgres/: init.sql
tests/: test_job.py
